[gd_scene load_steps=5 format=3 uid="uid://d2o6wquhpnbac"]

[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="1_bv72o"]
[ext_resource type="PackedScene" uid="uid://d3lefgipylt8o" path="res://scenes/ui/menu_label.tscn" id="2_ljs7x"]
[ext_resource type="PackedScene" uid="uid://cbahjpvjs4v7x" path="res://scenes/ui/build_menu_item.tscn" id="3_h57i6"]
[ext_resource type="Script" uid="uid://djw3u38vaxjcu" path="res://scripts/ui/build_submenu.gd" id="4_submenu"]

[node name="BuildSubmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -512.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bv72o")
script = ExtResource("4_submenu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 240.0
theme = ExtResource("1_bv72o")
color = Color(0.07683582, 0.07683582, 0.07683582, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 76.0
grow_horizontal = 2
theme = ExtResource("1_bv72o")
theme_override_constants/separation = 12

[node name="MenuLabel" parent="VBoxContainer" instance=ExtResource("2_ljs7x")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/MenuLabel/ColorRect" index="0"]
text = "Build Menu"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("1_bv72o")
columns = 2

[node name="BuildMenuItem" parent="VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[node name="BuildMenuItem2" parent="VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
theme = ExtResource("1_bv72o")
columns = 2

[node name="BuildMenuItem" parent="VBoxContainer/CenterContainer2/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[node name="BuildMenuItem2" parent="VBoxContainer/CenterContainer2/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer3"]
layout_mode = 2
theme = ExtResource("1_bv72o")
columns = 2

[node name="BuildMenuItem" parent="VBoxContainer/CenterContainer3/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[node name="BuildMenuItem2" parent="VBoxContainer/CenterContainer3/GridContainer" instance=ExtResource("3_h57i6")]
layout_mode = 2

[editable path="VBoxContainer/MenuLabel"]
